--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
             <div class="container">
                 <h2>Our Gallery</h2>
                 <div class="gallery-grid">
-                    <img src="Picsart_25-06-05_21-38-36-450.jpg" alt="Filling Station View 1"> <img src="Picsart_25-06-05_21-38-12-842.jpg" alt="Filling Station View 2"> <img src="photo-1585740452884-2a29a1d21514.jpg" alt="Filling Station View 3"> </div>
+                    <img src="org-wireless-broadband-connectivity-for-gas-stations.webp" alt="Filling Station View 1"> <img src="Filling-Stations.jpg" alt="Filling Station View 2"> <img src="istockphoto-482768863-612x612.jpg" alt="Filling Station View 3"> </div>
             </div>
         </section>
 
