--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
  align-items: center; /* লেখাগুলাকে অনুভূমিকভাবে মাঝখানে আনার জন্য */
  justify-content: center; /* লেখাগুলাকে উল্লম্বভাবে মাঝখানে আনার জন্য */
  min-height: 500px; /* প্রয়োজন অনুযায়ী উচ্চতা সেট করুন */
- background-image: url('WhatsApp Image 2025-06-18 at 22.17.02_4788aa44.jpg'); /* আপনার ছবির URL দিন */
+ background-image: url('0baea10b.jpg'); /* আপনার ছবির URL দিন */
  background-size: cover; /* অথবা contain - আপনার প্রয়োজন অনুযায়ী */
  background-position: center;
 }
